# 25WiSE-PyML

Homeworks/homework1/: health.ipynb
Lectures/lecture01/: PyML-1.ipynb  custom.css
Lectures/lecture02/: calculator.py
Lectures/lecture03/: lecture.ipynb
Numpy/: Array_Multiplication.ipynb  NumPy_ufuncs.ipynb  Numpy_Basics.ipynb  Random_Number.ipynb  readme.md
Pandas/: Pandas_Basic.ipynb  Plotting.ipynb  clean_data.csv  clean_data.json
Scipy/: Scipy_Basics.ipynb  arr.mat
Tensor/: 0_Background.ipynb  1_Basics.ipynb  2_datasets_dataloaders.ipynb  3_Transform.ipynb
lecture02/: .gitignore  PyML-2.ipynb  find_primes.profile  vec_ops.py
tutorial-project/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tutorial-project/core/config/: comments.md  config.py
tutorial-project/core/utils/: utils.py
tutorial-project/results/: database.py
tutorial-project/scripts/: comments.md  train.py
tutorial-project/tasks/first-part/: 1_setup.md  2_coding-exercise.md
tutorial-project/tasks/second-part/: 1_bigger_picture.md  2_coding-exercise.md
코딩기초트레이닝/: 0떼기.py  5명씩.py  9로나눈나머지.py  README.md  for_loop.md  generate_readme.py  l로만들기.py  n개간격의원소들.py  n번째원소부터.py  n보다커질때까지더하기.py  가까운1찾기.py  공배수.py  공백으로구분하기2.py  글자지우기.py  날짜비교하기.py  더크게합치기.py  뒤에서5등까지.py  마지막두원소.py  문자열리스트를문자열로반환하기.py  문자열바꿔서찾기.py  문자열섞기.py  문자열잘라서정렬하기.py  배열만들기1.py  배열민들기3.py  배열비교하기.py  배열에서문자열대소문자변환하기.py  배열의길이에따라다른연산하기.py  부분문자열이어붙여문자만들기.py  부분문자열인지확인하기.py  소문자로바꾸기.py  수열과구간쿼리2.py  수열과구간쿼리3.py  수조작하기2.Py  순서바꾸기.py  원소들의곱과합.py  조건문자열.py  주사위게임1.py  주사위게임2.py  첫번째로나오는음수.py  카운트다운.py  (+5 more)
(+60 files in other folders)
